--- a/defconfig/sun50i_defconfig
+++ b/defconfig/sun50i_defconfig
@@ -96,8 +96,12 @@ CONFIG_LDM_PARTITION=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_BFQ_GROUP_IOSCHED=y
 CONFIG_BINFMT_MISC=m
+CONFIG_CLEANCACHE=y
+CONFIG_FRONTSWAP=y
 CONFIG_ZSWAP=y
 CONFIG_Z3FOLD=y
+CONFIG_ZPOOL=y
+CONFIG_ZBUD=y
 CONFIG_CMA=y
 CONFIG_NET=y
 CONFIG_PACKET=y
