--- a/defconfig/sun8i_defconfig
+++ b/defconfig/sun8i_defconfig
@@ -742,7 +742,7 @@ CONFIG_NLS_CODEPAGE_852=y
 CONFIG_NLS_ISO8859_1=y
 CONFIG_NLS_ISO8859_2=y
 CONFIG_NLS_UTF8=y
-CONFIG_UNICODE=m
+CONFIG_UNICODE=y
 CONFIG_PERSISTENT_KEYRINGS=y
 CONFIG_ENCRYPTED_KEYS=y
 CONFIG_SECURITY=y
