CONFIG_OF_OVERLAY=y: `create symbols node`

--- a/defconfig/odroidxu4_defconfig
+++ b/defconfig/odroidxu4_defconfig
@@ -521,6 +521,7 @@ CONFIG_EXTRA_FIRMWARE_DIR="firmware"
 CONFIG_FW_LOADER_COMPRESS=y
 CONFIG_PARPORT=m
 CONFIG_BLK_DEV_NULL_BLK=m
+CONFIG_OF_OVERLAY=y
 CONFIG_ZRAM=m
 CONFIG_ZRAM_WRITEBACK=y
 CONFIG_BLK_DEV_LOOP=m
