--- a/defconfig/sun50i-devel_defconfig
+++ b/defconfig/sun50i-devel_defconfig
@@ -579,7 +579,8 @@ CONFIG_MTD_CFI=y
 CONFIG_MTD_JEDECPROBE=y
 CONFIG_MTD_SPI_NAND=m
 CONFIG_MTD_SPI_NOR=y
-CONFIG_ZRAM=m
+CONFIG_OF_OVERLAY=y
+CONFIG_ZRAM=y
 CONFIG_ZRAM_WRITEBACK=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=m
