--- a/defconfig/bcm2711_defconfig
+++ b/defconfig/bcm2711_defconfig
@@ -464,7 +464,8 @@ CONFIG_MTD_BLOCK=m
 CONFIG_MTD_BLOCK2MTD=m
 CONFIG_MTD_SPI_NOR=m
 CONFIG_MTD_UBI=m
-CONFIG_ZRAM=m
+CONFIG_OF_OVERLAY=y
+CONFIG_ZRAM=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_CRYPTOLOOP=m
 CONFIG_BLK_DEV_DRBD=m
