--- a/defconfig/pinebookpro_defconfig
+++ b/defconfig/pinebookpro_defconfig
@@ -2872,6 +2872,8 @@ CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_BINDERFS=y
 CONFIG_ROCKCHIP_EFUSE=y
 CONFIG_ROCKCHIP_OTP=m
+CONFIG_ROCKCHIP_SUSPEND_MODE=y
+CONFIG_ROCKCHIP_SIP=y
 CONFIG_NVMEM_RMEM=m
 CONFIG_MUX_ADG792A=m
 CONFIG_MUX_ADGS1408=m
