--- a/defconfig/sun50i-devel_defconfig
+++ b/defconfig/sun50i-devel_defconfig
@@ -875,6 +875,7 @@ CONFIG_PPS_CLIENT_GPIO=m
 CONFIG_PINCTRL_AXP209=m
 CONFIG_PINCTRL_SINGLE=y
 # CONFIG_PINCTRL_SUN8I_H3_R is not set
+CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_DWAPB=y
 CONFIG_GPIO_GENERIC_PLATFORM=y
 CONFIG_GPIO_HLWD=m
