--- a/defconfig/sun50i_defconfig
+++ b/defconfig/sun50i_defconfig
@@ -418,6 +418,7 @@ CONFIG_PINCTRL_AXP209=y
 CONFIG_PINCTRL_SINGLE=y
 # CONFIG_PINCTRL_SUN50I_H616 is not set
 # CONFIG_PINCTRL_SUN50I_H616_R is not set
+CONFIG_GPIO_SYSFS=y
 CONFIG_POWER_RESET_GPIO=y
 CONFIG_POWER_RESET_GPIO_RESTART=y
 CONFIG_SENSORS_GPIO_FAN=m
