--- a/defconfig/sun8i_defconfig
+++ b/defconfig/sun8i_defconfig
@@ -415,6 +415,7 @@ CONFIG_SPI_SPIDEV=y
 CONFIG_PINCTRL_AXP209=y
 # CONFIG_PINCTRL_SUN9I_A80 is not set
 # CONFIG_PINCTRL_SUN9I_A80_R is not set
+CONFIG_GPIO_SYSFS=y
 CONFIG_POWER_RESET=y
 CONFIG_POWER_RESET_GPIO=y
 CONFIG_POWER_RESET_GPIO_RESTART=y
