--- a/defconfig/rockchip64-base_defconfig
+++ b/defconfig/rockchip64-base_defconfig
@@ -26,7 +26,7 @@ CONFIG_CGROUP_DEVICE=y
 CONFIG_CGROUP_BPF=y
 CONFIG_USER_NS=y
 CONFIG_BOOT_CONFIG=y
-CONFIG_PROFILING=y
+CONFIG_PERF_EVENTS=y
 CONFIG_ARCH_ROCKCHIP=y
 # CONFIG_ARM64_ERRATUM_832075 is not set
 # CONFIG_ARM64_ERRATUM_834220 is not set
@@ -61,13 +61,13 @@ CONFIG_NUMA=y
 CONFIG_NODES_SHIFT=2
 CONFIG_HZ_1000=y
 CONFIG_PARAVIRT=y
-CONFIG_KEXEC=y
-CONFIG_KEXEC_FILE=y
-CONFIG_CRASH_DUMP=y
 CONFIG_COMPAT=y
-CONFIG_ARMV8_DEPRECATED=y
 CONFIG_ARM64_PMEM=y
+# CONFIG_ARM64_PTR_AUTH is not set
 # CONFIG_ARM64_BTI is not set
+# CONFIG_ARM64_E0PD is not set
+# CONFIG_ARCH_RANDOM is not set
+# CONFIG_ARM64_SVE is not set
 # CONFIG_EFI is not set
 CONFIG_HIBERNATION=y
 # CONFIG_HIBERNATION_SNAPSHOT_DEV is not set
@@ -120,11 +120,7 @@ CONFIG_BLK_CGROUP_IOPRIO=y
 CONFIG_BLK_INLINE_ENCRYPTION=y
 CONFIG_BLK_INLINE_ENCRYPTION_FALLBACK=y
 CONFIG_PARTITION_ADVANCED=y
-CONFIG_CMDLINE_PARTITION=y
-# CONFIG_MQ_IOSCHED_DEADLINE is not set
 # CONFIG_MQ_IOSCHED_KYBER is not set
-CONFIG_IOSCHED_BFQ=y
-CONFIG_BFQ_GROUP_IOSCHED=y
 CONFIG_BINFMT_MISC=m
 CONFIG_CLEANCACHE=y
 CONFIG_FRONTSWAP=y
@@ -280,6 +276,7 @@ CONFIG_BT_HCIUART_RTL=y
 CONFIG_BT_HCIBCM203X=m
 CONFIG_BT_HCIBPA10X=m
 CONFIG_CFG80211=m
+CONFIG_CFG80211_WEXT=y
 CONFIG_MAC80211=m
 CONFIG_MAC80211_MESH=y
 CONFIG_MAC80211_LEDS=y
@@ -306,20 +303,14 @@ CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
 CONFIG_ARM_SCMI_PROTOCOL=y
 CONFIG_ARM_SCPI_PROTOCOL=y
-CONFIG_MTD=y
-CONFIG_MTD_BLOCK=y
-CONFIG_MTD_SPI_NOR=y
-CONFIG_MTD_HYPERBUS=m
 CONFIG_OF_OVERLAY=y
 CONFIG_ZRAM=y
 CONFIG_ZRAM_WRITEBACK=y
 CONFIG_ZRAM_MEMORY_TRACKING=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_NBD=y
-CONFIG_BLK_DEV_RAM=m
 CONFIG_BLK_DEV_NVME=y
 CONFIG_NVME_HWMON=y
-CONFIG_ENCLOSURE_SERVICES=m
 CONFIG_SRAM=y
 # CONFIG_SCSI_PROC_FS is not set
 CONFIG_BLK_DEV_SD=y
@@ -489,16 +480,10 @@ CONFIG_I2C_MUX=y
 CONFIG_I2C_GPIO=y
 CONFIG_I2C_RK3X=y
 CONFIG_SPI=y
-CONFIG_SPI_DESIGNWARE=y
-CONFIG_SPI_DW_DMA=y
-CONFIG_SPI_DW_PCI=m
-CONFIG_SPI_DW_MMIO=m
 CONFIG_SPI_ROCKCHIP=y
 CONFIG_SPI_ROCKCHIP_SFC=m
-CONFIG_SPI_MUX=m
 # CONFIG_PTP_1588_CLOCK is not set
 CONFIG_PINCTRL_RK805=y
-CONFIG_PINCTRL_SINGLE=m
 CONFIG_GPIO_SYSFS=y
 CONFIG_POWER_RESET_GPIO=y
 CONFIG_POWER_RESET_GPIO_RESTART=y
@@ -525,8 +510,7 @@ CONFIG_REGULATOR_FAN53555=y
 CONFIG_REGULATOR_GPIO=y
 CONFIG_REGULATOR_PWM=y
 CONFIG_REGULATOR_RK808=y
-CONFIG_RC_CORE=y
-CONFIG_RC_MAP=m
+CONFIG_RC_CORE=m
 CONFIG_RC_DECODERS=y
 CONFIG_IR_IMON_DECODER=m
 CONFIG_IR_JVC_DECODER=m
@@ -572,7 +556,6 @@ CONFIG_V4L_MEM2MEM_DRIVERS=y
 CONFIG_VIDEO_MEM2MEM_DEINTERLACE=y
 CONFIG_VIDEO_ROCKCHIP_RGA=y
 CONFIG_VIDEO_ROCKCHIP_ISP1=m
-CONFIG_VIDEO_IR_I2C=m
 CONFIG_DRM=y
 CONFIG_DRM_LOAD_EDID_FIRMWARE=y
 CONFIG_DRM_ROCKCHIP=y
@@ -602,6 +585,7 @@ CONFIG_SND_MIXER_OSS=y
 CONFIG_SND_PCM_OSS=y
 CONFIG_SND_HRTIMER=y
 # CONFIG_SND_SUPPORT_OLD_API is not set
+# CONFIG_SND_SPI is not set
 CONFIG_SND_USB_AUDIO=y
 CONFIG_SND_SOC=y
 CONFIG_SND_SOC_ROCKCHIP=y
@@ -651,7 +635,6 @@ CONFIG_USB_EHCI_HCD_PLATFORM=y
 CONFIG_USB_OHCI_HCD=y
 CONFIG_USB_OHCI_HCD_PLATFORM=y
 CONFIG_USB_ACM=y
-CONFIG_USB_PRINTER=y
 CONFIG_USB_WDM=y
 CONFIG_USB_STORAGE=y
 CONFIG_USB_UAS=y
@@ -735,22 +718,15 @@ CONFIG_RTC_CLASS=y
 CONFIG_RTC_DRV_RK808=y
 CONFIG_DMADEVICES=y
 CONFIG_PL330_DMA=y
-CONFIG_DW_DMAC=m
-CONFIG_DW_DMAC_PCI=m
-CONFIG_DW_EDMA_PCIE=m
 CONFIG_DMABUF_HEAPS=y
 CONFIG_DMABUF_HEAPS_SYSTEM=y
 CONFIG_DMABUF_HEAPS_CMA=y
 # CONFIG_VIRTIO_MENU is not set
 # CONFIG_VHOST_MENU is not set
 CONFIG_STAGING=y
-CONFIG_RTL8723BS=m
-CONFIG_R8712U=m
-CONFIG_R8188EU=m
 CONFIG_STAGING_MEDIA=y
 CONFIG_VIDEO_HANTRO=y
 CONFIG_VIDEO_ROCKCHIP_VDEC=y
-CONFIG_STAGING_BOARD=y
 CONFIG_COMMON_CLK_RK808=y
 CONFIG_COMMON_CLK_SCMI=y
 CONFIG_COMMON_CLK_SCPI=y
