`BLK_DEV_NBD=m`

--- a/defconfig/meson64_defconfig
+++ b/defconfig/meson64_defconfig
@@ -211,7 +211,7 @@ CONFIG_ZRAM_WRITEBACK=y
 CONFIG_ZRAM_MEMORY_TRACKING=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=0
-CONFIG_BLK_DEV_NBD=y
+CONFIG_BLK_DEV_NBD=m
 CONFIG_BLK_DEV_RAM=y
 CONFIG_NVME_TARGET=m
 CONFIG_DUMMY_IRQ=m
