--- a/defconfig/sun50i_defconfig
+++ b/defconfig/sun50i_defconfig
@@ -268,7 +268,7 @@ CONFIG_ZRAM=y
 CONFIG_ZRAM_WRITEBACK=y
 CONFIG_ZRAM_MEMORY_TRACKING=y
 CONFIG_BLK_DEV_LOOP=y
-CONFIG_BLK_DEV_NBD=y
+CONFIG_BLK_DEV_NBD=m
 CONFIG_ENCLOSURE_SERVICES=m
 CONFIG_MISC_RTSX_USB=m
 CONFIG_SCSI=y
