--- a/defconfig/meson64_defconfig
+++ b/defconfig/meson64_defconfig
@@ -473,6 +473,7 @@ CONFIG_MFD_SEC_CORE=y
 CONFIG_MFD_KHADAS_MCU=m
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
+CONFIG_REGULATOR_FAN53555=y
 CONFIG_REGULATOR_GPIO=y
 CONFIG_REGULATOR_PWM=y
 CONFIG_RC_CORE=y
@@ -885,6 +886,8 @@ CONFIG_PWM=y
 CONFIG_PWM_MESON=y
 # CONFIG_ARM_PMU is not set
 CONFIG_MESON_EFUSE=y
+CONFIG_MESON_MX_EFUSE=y
+CONFIG_MUX_GPIO=y
 CONFIG_TEE=y
 CONFIG_OPTEE=y
 CONFIG_VALIDATE_FS_PARSER=y
