meson64_defconfig: `maintenance`

--- a/defconfig/meson64_defconfig
+++ b/defconfig/meson64_defconfig
@@ -385,7 +385,6 @@ CONFIG_RTW88_8821CE=m
 # CONFIG_WLAN_VENDOR_SILABS is not set
 # CONFIG_WLAN_VENDOR_ST is not set
 # CONFIG_WLAN_VENDOR_TI is not set
-CONFIG_88XXAU=m
 # CONFIG_WLAN_VENDOR_ZYDAS is not set
 # CONFIG_WLAN_VENDOR_QUANTENNA is not set
 CONFIG_USB_NET_RNDIS_WLAN=m
@@ -954,6 +953,7 @@ CONFIG_VFAT_FS=y
 CONFIG_FAT_DEFAULT_UTF8=y
 CONFIG_EXFAT_FS=m
 CONFIG_NTFS3_FS=m
+CONFIG_CONFIGFS_FS=y
 CONFIG_TMPFS=y
 CONFIG_TMPFS_POSIX_ACL=y
 CONFIG_HFS_FS=m
