--- a/defconfig/meson64_defconfig
+++ b/defconfig/meson64_defconfig
@@ -725,7 +725,7 @@ CONFIG_DRM_DW_HDMI_GP_AUDIO=y
 CONFIG_DRM_DW_HDMI_CEC=y
 CONFIG_DRM_MESON=y
 CONFIG_DRM_SIMPLEDRM=m
-CONFIG_DRM_LIMA=m
+# CONFIG_DRM_LIMA= is not set
 CONFIG_DRM_PANFROST=m
 CONFIG_FB=y
 CONFIG_FIRMWARE_EDID=y
