--- a/defconfig/rockchip64_defconfig
+++ b/defconfig/rockchip64_defconfig
@@ -125,6 +125,7 @@ CONFIG_CMDLINE_PARTITION=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_BFQ_GROUP_IOSCHED=y
 CONFIG_BINFMT_MISC=m
+CONFIG_CLEANCACHE=y
 CONFIG_FRONTSWAP=y
 CONFIG_ZSWAP=y
 CONFIG_Z3FOLD=y
