--- a/defconfig/rk356x_defconfig
+++ b/defconfig/rk356x_defconfig
@@ -300,6 +300,9 @@ CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
 CONFIG_ARM_SCMI_PROTOCOL=y
 CONFIG_ARM_SCPI_PROTOCOL=y
+CONFIG_EFI_BOOTLOADER_CONTROL=y
+CONFIG_RESET_ATTACK_MITIGATION=y
+CONFIG_EFI_COCO_SECRET=y
 CONFIG_MTD=y
 CONFIG_MTD_BLOCK=y
 CONFIG_MTD_SPI_NOR=y
@@ -584,6 +587,7 @@ CONFIG_DRM_DISPLAY_CONNECTOR=y
 CONFIG_DRM_LIMA=m
 CONFIG_DRM_PANFROST=y
 CONFIG_FB=y
+CONFIG_FB_EFI=y
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 CONFIG_BACKLIGHT_PWM=y
 CONFIG_FRAMEBUFFER_CONSOLE_ROTATION=y
