allwinner: `sun7i defconfig`

--- a/defconfig/sun7i_defconfig
+++ b/defconfig/sun7i_defconfig
@@ -89,8 +89,12 @@ CONFIG_BINFMT_ELF_FDPIC=y
 CONFIG_BINFMT_FLAT=y
 CONFIG_BINFMT_ZFLAT=y
 CONFIG_BINFMT_MISC=m
+CONFIG_CLEANCACHE=y
+CONFIG_FRONTSWAP=y
 CONFIG_ZSWAP=y
 CONFIG_Z3FOLD=y
+CONFIG_ZPOOL=y
+CONFIG_ZBUD=y
 CONFIG_CMA=y
 CONFIG_CMA_DEBUGFS=y
 CONFIG_NET=y
