allwinner: `sun7i_defconfig`
ethernet support

--- a/defconfig/sun7i_defconfig
+++ b/defconfig/sun7i_defconfig
@@ -4,7 +4,6 @@ CONFIG_POSIX_MQUEUE=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_BPF_SYSCALL=y
-# CONFIG_BPF_UNPRIV_DEFAULT_OFF is not set
 CONFIG_BSD_PROCESS_ACCT=y
 CONFIG_BSD_PROCESS_ACCT_V3=y
 CONFIG_TASKSTATS=y
@@ -255,6 +254,10 @@ CONFIG_UEVENT_HELPER=y
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
 # CONFIG_PREVENT_FIRMWARE_BUILD is not set
+CONFIG_SUN50I_DE2_BUS=y
+CONFIG_CONNECTOR=y
+CONFIG_ARM_SCMI_PROTOCOL=y
+CONFIG_ARM_SCPI_PROTOCOL=m
 CONFIG_SYSFB_SIMPLEFB=y
 CONFIG_EFI_BOOTLOADER_CONTROL=y
 CONFIG_RESET_ATTACK_MITIGATION=y
@@ -262,7 +265,19 @@ CONFIG_EFI_COCO_SECRET=y
 CONFIG_GNSS=y
 CONFIG_GNSS_SIRF_SERIAL=m
 CONFIG_GNSS_UBX_SERIAL=m
+CONFIG_MTD=y
+CONFIG_MTD_CMDLINE_PARTS=m
+CONFIG_MTD_SWAP=m
+CONFIG_MTD_PARTITIONED_MASTER=y
+CONFIG_MTD_ONENAND=m
+CONFIG_MTD_RAW_NAND=m
+CONFIG_MTD_NAND_SUNXI=m
+CONFIG_MTD_NAND_PLATFORM=m
+CONFIG_MTD_SPI_NAND=m
+CONFIG_MTD_SPI_NOR=m
+CONFIG_MTD_UBI=m
 CONFIG_OF_OVERLAY=y
+CONFIG_BLK_DEV_PCIESSD_MTIP32XX=m
 CONFIG_ZRAM=y
 CONFIG_ZRAM_WRITEBACK=y
 CONFIG_ZRAM_MEMORY_TRACKING=y
@@ -270,6 +285,7 @@ CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_NBD=m
 CONFIG_ENCLOSURE_SERVICES=m
 CONFIG_SRAM=y
+CONFIG_MISC_RTSX_PCI=m
 CONFIG_MISC_RTSX_USB=m
 CONFIG_BLK_DEV_SD=y
 CONFIG_CHR_DEV_ST=m
@@ -297,6 +313,10 @@ CONFIG_NET_TEAM_MODE_ROUNDROBIN=m
 CONFIG_NET_TEAM_MODE_RANDOM=m
 CONFIG_NET_TEAM_MODE_ACTIVEBACKUP=m
 CONFIG_NET_TEAM_MODE_LOADBALANCE=m
+CONFIG_MACVLAN=m
+CONFIG_MACVTAP=m
+CONFIG_IPVLAN=m
+CONFIG_IPVTAP=m
 CONFIG_MACSEC=m
 CONFIG_TUN=y
 CONFIG_VETH=y
@@ -351,10 +371,6 @@ CONFIG_SUN4I_EMAC=m
 # CONFIG_NET_VENDOR_BROCADE is not set
 # CONFIG_NET_VENDOR_QUALCOMM is not set
 # CONFIG_NET_VENDOR_RDC is not set
-CONFIG_8139CP=m
-CONFIG_8139TOO=m
-CONFIG_8139TOO_TUNE_TWISTER=y
-CONFIG_8139TOO_8129=y
 CONFIG_R8169=m
 # CONFIG_NET_VENDOR_RENESAS is not set
 # CONFIG_NET_VENDOR_ROCKER is not set
@@ -366,6 +382,8 @@ CONFIG_R8169=m
 # CONFIG_NET_VENDOR_SMSC is not set
 # CONFIG_NET_VENDOR_SOCIONEXT is not set
 CONFIG_STMMAC_ETH=y
+CONFIG_DWMAC_DWC_QOS_ETH=m
+CONFIG_STMMAC_PCI=m
 # CONFIG_NET_VENDOR_SUN is not set
 # CONFIG_NET_VENDOR_SYNOPSYS is not set
 # CONFIG_NET_VENDOR_TEHUTI is not set
@@ -375,7 +393,6 @@ CONFIG_STMMAC_ETH=y
 # CONFIG_NET_VENDOR_WIZNET is not set
 # CONFIG_NET_VENDOR_XILINX is not set
 CONFIG_LED_TRIGGER_PHY=y
-CONFIG_REALTEK_PHY=y
 CONFIG_MDIO_BUS_MUX_GPIO=m
 CONFIG_MDIO_BUS_MUX_MULTIPLEXER=y
 CONFIG_USB_RTL8150=y
@@ -406,7 +423,6 @@ CONFIG_BRCMFMAC_PCIE=y
 # CONFIG_WLAN_VENDOR_MARVELL is not set
 # CONFIG_WLAN_VENDOR_MEDIATEK is not set
 # CONFIG_WLAN_VENDOR_MICROCHIP is not set
-# CONFIG_WLAN_VENDOR_PURELIFI is not set
 CONFIG_RT2X00=m
 CONFIG_RT2500USB=m
 CONFIG_RT73USB=m
@@ -419,9 +435,7 @@ CONFIG_RTL8187=m
 CONFIG_RTL8XXXU=m
 CONFIG_RTL8XXXU_UNTESTED=y
 CONFIG_RTW88=m
-CONFIG_RTW89=m
 # CONFIG_WLAN_VENDOR_RSI is not set
-# CONFIG_WLAN_VENDOR_SILABS is not set
 # CONFIG_WLAN_VENDOR_ST is not set
 # CONFIG_WLAN_VENDOR_TI is not set
 # CONFIG_WLAN_VENDOR_ZYDAS is not set
@@ -466,9 +480,10 @@ CONFIG_SPI_SUN6I=y
 CONFIG_SPI_SPIDEV=y
 CONFIG_PINCTRL_AXP209=y
 CONFIG_PINCTRL_SINGLE=m
-# CONFIG_PINCTRL_SUN9I_A80 is not set
-# CONFIG_PINCTRL_SUN9I_A80_R is not set
 CONFIG_GPIO_SYSFS=y
+CONFIG_GPIO_DWAPB=m
+CONFIG_GPIO_GENERIC_PLATFORM=m
+CONFIG_GPIO_SYSCON=m
 CONFIG_POWER_RESET=y
 CONFIG_POWER_RESET_GPIO=y
 CONFIG_POWER_RESET_GPIO_RESTART=y
@@ -476,6 +491,7 @@ CONFIG_POWER_SUPPLY=y
 CONFIG_CHARGER_AXP20X=y
 CONFIG_BATTERY_AXP20X=y
 CONFIG_AXP20X_POWER=y
+CONFIG_SENSORS_DRIVETEMP=m
 CONFIG_SENSORS_GPIO_FAN=m
 CONFIG_SENSORS_PWM_FAN=m
 CONFIG_THERMAL=y
@@ -488,7 +504,7 @@ CONFIG_THERMAL_GOV_USER_SPACE=y
 CONFIG_CPU_THERMAL=y
 CONFIG_DEVFREQ_THERMAL=y
 CONFIG_THERMAL_MMIO=m
-CONFIG_SUN8I_THERMAL=y
+CONFIG_SUN8I_THERMAL=m
 CONFIG_GENERIC_ADC_THERMAL=m
 CONFIG_WATCHDOG=y
 CONFIG_SOFT_WATCHDOG=m
@@ -554,12 +570,15 @@ CONFIG_USB_VIDEO_CLASS=y
 CONFIG_V4L_PLATFORM_DRIVERS=y
 CONFIG_V4L_MEM2MEM_DRIVERS=y
 CONFIG_VIDEO_MEM2MEM_DEINTERLACE=y
+CONFIG_VIDEO_MUX=m
+CONFIG_VIDEO_SUN4I_CSI=y
 CONFIG_VIDEO_SUN6I_CSI=y
 CONFIG_VIDEO_SUN8I_DEINTERLACE=y
 CONFIG_VIDEO_SUN8I_ROTATE=y
 # CONFIG_VIDEO_IR_I2C is not set
 CONFIG_DRM=y
 CONFIG_DRM_LOAD_EDID_FIRMWARE=y
+CONFIG_DRM_MALI_DISPLAY=m
 CONFIG_DRM_SUN4I=y
 CONFIG_DRM_SUN4I_HDMI_CEC=y
 # CONFIG_DRM_SUN6I_DSI is not set
@@ -613,7 +632,6 @@ CONFIG_SND_SOC_RT5616=m
 CONFIG_SND_SOC_RT5631=m
 CONFIG_SND_SOC_RT5640=m
 CONFIG_SND_SOC_RT5659=m
-CONFIG_SND_SOC_RT9120=m
 CONFIG_SND_SOC_SIMPLE_AMPLIFIER=y
 CONFIG_SND_SOC_SIMPLE_MUX=y
 CONFIG_SND_SOC_SPDIF=y
@@ -646,6 +664,7 @@ CONFIG_USB_MUSB_HDRC=y
 CONFIG_USB_MUSB_SUNXI=y
 CONFIG_MUSB_PIO_ONLY=y
 CONFIG_USB_DWC2=y
+CONFIG_USB_DWC2_PCI=m
 CONFIG_USB_SERIAL=y
 CONFIG_USB_SERIAL_CH341=y
 CONFIG_USB_SERIAL_CP210X=y
@@ -690,7 +709,6 @@ CONFIG_LEDS_TRIGGER_PATTERN=y
 CONFIG_RTC_CLASS=y
 # CONFIG_RTC_INTF_SYSFS is not set
 # CONFIG_RTC_INTF_PROC is not set
-CONFIG_RTC_DRV_AC100=y
 CONFIG_RTC_DRV_SUNXI=y
 CONFIG_DMADEVICES=y
 CONFIG_DMA_SUN6I=y
@@ -709,13 +727,6 @@ CONFIG_VIDEO_SUNXI=y
 CONFIG_VIDEO_SUNXI_CEDRUS=y
 CONFIG_STAGING_BOARD=y
 CONFIG_COMMON_CLK_AXI_CLKGEN=m
-# CONFIG_CLK_SUNXI_CLOCKS is not set
-# CONFIG_CLK_SUNXI_PRCM_SUN9I is not set
-# CONFIG_SUN6I_A31_CCU is not set
-# CONFIG_SUN8I_A23_CCU is not set
-# CONFIG_SUN8I_A33_CCU is not set
-CONFIG_SUN8I_V3S_CCU=m
-CONFIG_SUN8I_R40_CCU=m
 CONFIG_MAILBOX=y
 CONFIG_SUN6I_MSGBOX=m
 CONFIG_SUN50I_IOMMU=y
@@ -723,7 +734,6 @@ CONFIG_DEVFREQ_GOV_PERFORMANCE=y
 CONFIG_DEVFREQ_GOV_POWERSAVE=y
 CONFIG_DEVFREQ_GOV_USERSPACE=y
 CONFIG_DEVFREQ_GOV_PASSIVE=y
-CONFIG_ARM_SUN8I_A33_MBUS_DEVFREQ=m
 CONFIG_PM_DEVFREQ_EVENT=y
 CONFIG_IIO=y
 CONFIG_IIO_CONFIGFS=y
