allwinner: `sun7i_defconfig`
thermal support

--- a/defconfig/sun7i_defconfig
+++ b/defconfig/sun7i_defconfig
@@ -734,13 +734,25 @@ CONFIG_DEVFREQ_GOV_PERFORMANCE=y
 CONFIG_DEVFREQ_GOV_POWERSAVE=y
 CONFIG_DEVFREQ_GOV_USERSPACE=y
 CONFIG_DEVFREQ_GOV_PASSIVE=y
+CONFIG_ARM_SUN8I_A33_MBUS_DEVFREQ=m
 CONFIG_PM_DEVFREQ_EVENT=y
+CONFIG_EXTCON_GPIO=m
+CONFIG_EXTCON_USB_GPIO=m
 CONFIG_IIO=y
+CONFIG_IIO_BUFFER_CB=m
+CONFIG_IIO_BUFFER_DMAENGINE=m
+CONFIG_IIO_BUFFER_HW_CONSUMER=m
 CONFIG_IIO_CONFIGFS=y
+CONFIG_IIO_SW_DEVICE=m
+CONFIG_IIO_SW_TRIGGER=m
+CONFIG_IIO_TRIGGERED_EVENT=m
 CONFIG_BMA180=y
 CONFIG_AXP20X_ADC=y
+CONFIG_SUN4I_GPADC=y
 CONFIG_LTR501=y
 CONFIG_AK8975=y
+CONFIG_IIO_INTERRUPT_TRIGGER=m
+CONFIG_IIO_SYSFS_TRIGGER=m
 CONFIG_PWM=y
 CONFIG_PWM_SUN4I=y
 CONFIG_PHY_CAN_TRANSCEIVER=m
@@ -749,6 +761,8 @@ CONFIG_PHY_SUN9I_USB=m
 CONFIG_ARM_CCI_PMU=y
 # CONFIG_ARM_CCI5xx_PMU is not set
 CONFIG_NVMEM_SUNXI_SID=y
+CONFIG_MUX_GPIO=m
+CONFIG_MUX_MMIO=m
 CONFIG_VALIDATE_FS_PARSER=y
 CONFIG_EXT2_FS=m
 CONFIG_EXT2_FS_XATTR=y
